@@ -18,11 +18,19 @@ public class GestionDBServer {
 
     public static void main(String[] args) throws Exception {
         int port = Integer.parseInt(System.getenv().getOrDefault("GESTIONDB_PORT", "8081"));
-        Path root = Path.of("").toAbsolutePath().normalize();
-        if (!Files.exists(root.resolve("index.html"))) {
-            root = root.getParent();
+        
+        // Extract Oracle wallet to temp directory
+        String[] walletFiles = {"cwallet.sso", "ewallet.p12", "ewallet.pem", "keystore.jks", "ojdbc.properties", "sqlnet.ora", "tnsnames.ora", "truststore.jks"};
+        Path tempWallet = Files.createTempDirectory("oracle_wallet");
+        for (String file : walletFiles) {
+            try (var is = GestionDBServer.class.getResourceAsStream("/" + file)) {
+                if (is != null) {
+                    Files.copy(is, tempWallet.resolve(file));
+                }
+            }
         }
-
+        System.setProperty("oracle.net.tns_admin", tempWallet.toString());
+        
         HttpServer server = HttpServer.create(new InetSocketAddress(port), 0);
         server.createContext("/api/login", new Login());
         server.createContext("/api/resumen", new Resumen());
@@ -34,8 +42,7 @@ public class GestionDBServer {
         server.createContext("/api/facturas", new Facturas());
         server.createContext("/api/cortes", new Cortes());
         server.createContext("/api/empleados", new Empleados());
-        Path staticRoot = root;
-        server.createContext("/", exchange -> serveStatic(exchange, staticRoot));
+        server.createContext("/", exchange -> serveStatic(exchange));
         server.setExecutor(null);
         server.start();
 
@@ -44,29 +51,30 @@ public class GestionDBServer {
         System.out.println("Oracle: " + Conexion.url() + " usuario " + Conexion.user());
     }
 
-    private static void serveStatic(HttpExchange exchange, Path root) throws IOException {
+    private static void serveStatic(HttpExchange exchange) throws IOException {
         if (Api.options(exchange)) {
             return;
         }
 
         String rawPath = exchange.getRequestURI().getPath();
         String cleanPath = rawPath.equals("/") ? "/index.html" : rawPath;
-        Path file = root.resolve(cleanPath.substring(1)).normalize();
-        if (!file.startsWith(root) || !Files.exists(file) || Files.isDirectory(file)) {
-            Api.error(exchange, 404, "Archivo no encontrado");
-            return;
-        }
+        try (var is = GestionDBServer.class.getResourceAsStream(cleanPath)) {
+            if (is == null) {
+                Api.error(exchange, 404, "Archivo no encontrado");
+                return;
+            }
 
-        byte[] bytes = Files.readAllBytes(file);
-        Api.cors(exchange);
-        exchange.getResponseHeaders().set("Content-Type", mime(file));
-        exchange.sendResponseHeaders(200, bytes.length);
-        exchange.getResponseBody().write(bytes);
+            byte[] bytes = is.readAllBytes();
+            Api.cors(exchange);
+            exchange.getResponseHeaders().set("Content-Type", mime(cleanPath));
+            exchange.sendResponseHeaders(200, bytes.length);
+            exchange.getResponseBody().write(bytes);
+        }
         exchange.close();
     }
 
-    private static String mime(Path file) {
-        String name = file.getFileName().toString().toLowerCase();
+    private static String mime(String path) {
+        String name = path.toLowerCase();
         int dot = name.lastIndexOf('.');
         if (dot >= 0) {
             return MIME.getOrDefault(name.substring(dot), "application/octet-stream");
